Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-12632

Source and destination overlap in memcpy, encryption.innodb-discard-import-change fails in buildbot with valgrind

    XMLWordPrintable

Details

    Description

      http://buildbot.askmonty.org/buildbot/builders/work-amd64-valgrind/builds/10024/steps/test/logs/stdio

      encryption.innodb-discard-import-change 'cbc,innodb_plugin' w4 [ fail ]  Found warnings/errors in server log file!
              Test ended at 2017-04-27 07:21:32
      line
      ==2938== Thread 22:
      ==2938== Source and destination overlap in memcpy(0xdec8000, 0xdec8000, 16384)
      ==2938==    at 0x4C2C51C: memcpy@@GLIBC_2.14 (vg_replace_strmem.c:1018)
      ==2938==    by 0xBF958EA: fil_iterate(fil_iterator_t const&, buf_block_t*, PageCallback&) (fil0fil.cc:6716)
      ==2938==    by 0xBF9616B: fil_tablespace_iterate(dict_table_t*, unsigned long, PageCallback&) (fil0fil.cc:6938)
      ==2938==    by 0xC0DF94A: row_import_for_mysql(dict_table_t*, row_prebuilt_t*) (row0import.cc:3574)
      ==2938==    by 0xBFF8F62: ha_innodb::discard_or_import_tablespace(char) (ha_innodb.cc:12396)
      ==2938==    by 0x8728C5: handler::ha_discard_or_import_tablespace(char) (handler.cc:4159)
      ==2938==    by 0x6DD7F1: mysql_discard_or_import_tablespace(THD*, TABLE_LIST*, bool) (sql_table.cc:5627)
      ==2938==    by 0x75B145: Sql_cmd_discard_import_tablespace::execute(THD*) (sql_alter.cc:365)
      ==2938==    by 0x6266AF: mysql_execute_command(THD*) (sql_parse.cc:5695)
      ==2938==    by 0x62A952: mysql_parse(THD*, char*, unsigned int, Parser_state*) (sql_parse.cc:7343)
      ==2938==    by 0x619942: dispatch_command(enum_server_command, THD*, char*, unsigned int) (sql_parse.cc:1490)
      ==2938==    by 0x61869C: do_command(THD*) (sql_parse.cc:1109)
      ^ Found warnings in /mnt/data/buildot/maria-slave/work-opensuse-amd64/build/mysql-test/var/4/log/mysqld.1.err
      

      Also reproducible locally.

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25d
                  0.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.